FIX: Fixed issue when navigation drop down incorrect visibled

--- a/CSS/MAIN/container-files.css
+++ b/CSS/MAIN/container-files.css
@@ -27,3 +27,6 @@
   background-repeat: no-repeat;
   background-position: center center;
 }
+.contacts-container-1 {
+  overflow: visible;
+}
